Wed Nov  8 11:10:59 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * system.h (STAT_MACROS): ifdef S_IFMT, then use it as before; but
        if it's not defined, then just do a single mask and assume
        acceptance any of non-zero result.  Norbert, I trust you'll let me
        know if this is unsatisfactory. :-)
        Ifdef HAVE_SYS_UTIME_H, then include <sys/utime.h>.  Only OS/2
        defines this right now.

Wed Nov  8 13:18:51 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* valloc.c: omit malloc declaration (it's already in system.h
	  which is included and conflicts with <stdlib.h> on some
	  systems).

Tue Nov  7 19:38:48 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* system.h (STAT_MACROS_BROKEN): undo previous change, because
	  else all regular files will be identified as links (the mask for
	  links is S_IFREG|S_IFCHR).

Mon Nov  6 19:20:56 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * system.h (STAT_MACROS_BROKEN): in defining the S_IF* macros,
        don't fold to 1 or 0 by first masking with S_IFMT; not all
        systems have that macro, and anyway it's only necessary that we
        return non-zero.

Fri Oct 27 13:43:35 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * save-cwd.c: use __PROTO instead of __P (see below).

        * getline.h (__PROTO): same as below.

        * save-cwd.h (__PROTO): replaces __P.  New name, so don't ask if
        already defined.  The conflict was that OS/2 w/ IBM C/C++ uses
        `__P' for something else, in <ctype.h> of all places.

        * system.h: do nothing about alloca ifdef ALLOCA_IN_STDLIB (see
        ../src/ChangeLog).

Tue Oct 24 13:01:25 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* wait.h: include sys/resource.h if available. This is needed at
	  least under AIX-3.2 where <sys/wait.h> doesn't include it.

Mon Oct 23 17:39:11 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* valloc.c (valloc): change parameter definition
